--- a/po/ja.po
+++ b/po/ja.po
@@ -1,7 +1,7 @@
 # Japanese translation for Audacious Plugins
 # Copyright (C) Audacious translators
 # This file is distributed under the same license as the Audacious Plugins package.
-# 
+#
 # Translators:
 #   <hallconnen2+transifex@gmail.com>, 2012.
 # Shuuji Takahashi <shuuji3@gmail.com>, 2012.
@@ -11,17 +11,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-07-25 20:34-0400\n"
+"POT-Creation-Date: 2012-09-15 12:42+0200\n"
 "PO-Revision-Date: 2012-09-09 03:47+0000\n"
 "Last-Translator: キュア読み専™ <hallconnen2+transifex@gmail.com>\n"
 "Language-Team: Japanese\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ja\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: src/aac/libmp4.c:930
+#: src/aac/libmp4.c:931
 msgid "AAC Decoder"
 msgstr "AAC デコーダ"
 
@@ -37,7 +37,7 @@ msgstr "アラーム"
 msgid "This is your wakeup call."
 msgstr "目覚ましです。"
 
-#: src/alarm/interface.c:54 src/alarm/interface.c:1180 src/sndio/sndio.c:431
+#: src/alarm/interface.c:54 src/alarm/interface.c:1180 src/sndio/sndio.c:433
 msgid "OK"
 msgstr "OK"
 
@@ -230,13 +230,59 @@ msgid ""
 "    Display a reminder when the alarm goes off,\n"
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
-msgstr "\n時刻\n  アラーム時刻:\n    アラームが鳴る時刻です。\n\n  静かになるまでの時間\n    アラームが鳴り止むまでの時間です。\n      (めざましダイアログを閉じなかった場合)\n\n\n曜日\n  曜日:\n    アラームが鳴る曜日を選択します。\n\n  時刻:\n    それぞれの曜日のアラーム時刻を選択するか、トグ\n    ルボタンを選択し、デフォルト時刻に設定します。\n\n\n音量:\n  フェード:\n    この時間をかけて、選択した音量まで音量をフェー\n    ドアップします。\n\n  開始:\n    この音量からフェードを始めます。\n\n  終了:\n    この音量でフェードを終わります。\n\n\nオプション:\n  追加コマンド:\n    アラーム時刻になると、このコマンドを実行します。\n\n  プレイリスト:\n    曲を再生する時に、このプレイリストをロードしま\n    す。プレイリストを指定しなかった場合、\n    リストの再生中の曲が使われます。\n    mp3 または ogg ストリームの URL を指定すること\n    もできます。\n\n  リマインダ:\n    アラームが止まった時にリマインダを表示します。\n    表示するには、テキストボックスにリマインダを入\n    力し、トグルボタンをオンにしてください。\n"
+msgstr ""
+"\n"
+"時刻\n"
+"  アラーム時刻:\n"
+"    アラームが鳴る時刻です。\n"
+"\n"
+"  静かになるまでの時間\n"
+"    アラームが鳴り止むまでの時間です。\n"
+"      (めざましダイアログを閉じなかった場合)\n"
+"\n"
+"\n"
+"曜日\n"
+"  曜日:\n"
+"    アラームが鳴る曜日を選択します。\n"
+"\n"
+"  時刻:\n"
+"    それぞれの曜日のアラーム時刻を選択するか、トグ\n"
+"    ルボタンを選択し、デフォルト時刻に設定します。\n"
+"\n"
+"\n"
+"音量:\n"
+"  フェード:\n"
+"    この時間をかけて、選択した音量まで音量をフェー\n"
+"    ドアップします。\n"
+"\n"
+"  開始:\n"
+"    この音量からフェードを始めます。\n"
+"\n"
+"  終了:\n"
+"    この音量でフェードを終わります。\n"
+"\n"
+"\n"
+"オプション:\n"
+"  追加コマンド:\n"
+"    アラーム時刻になると、このコマンドを実行します。\n"
+"\n"
+"  プレイリスト:\n"
+"    曲を再生する時に、このプレイリストをロードしま\n"
+"    す。プレイリストを指定しなかった場合、\n"
+"    リストの再生中の曲が使われます。\n"
+"    mp3 または ogg ストリームの URL を指定すること\n"
+"    もできます。\n"
+"\n"
+"  リマインダ:\n"
+"    アラームが止まった時にリマインダを表示します。\n"
+"    表示するには、テキストボックスにリマインダを入\n"
+"    力し、トグルボタンをオンにしてください。\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
 msgstr "ヘルプ"
 
-#: src/alarm/interface.c:1189 src/sndio/sndio.c:439
+#: src/alarm/interface.c:1189 src/sndio/sndio.c:441
 msgid "Cancel"
 msgstr "キャンセル"
 
@@ -292,7 +338,9 @@ msgstr "AMIDI-Plug (MIDI プレイヤー)"
 msgid ""
 "You have not selected any sequencer ports for MIDI playback.  You can do so "
 "in the MIDI plugin preferences."
-msgstr "MIDI を再生するためのシーケンサ・ポートが選択されていません。MIDI プラグインの設定で選択することができます。"
+msgstr ""
+"MIDI を再生するためのシーケンサ・ポートが選択されていません。MIDI プラグイン"
+"の設定で選択することができます。"
 
 #: src/amidi-plug/backend-alsa/b-alsa.c:35
 msgid "ALSA Backend "
@@ -300,10 +348,23 @@ msgstr "ALSA バックエンド"
 
 #: src/amidi-plug/backend-alsa/b-alsa.c:37
 msgid ""
-"This backend sends MIDI events to a group of user-chosen ALSA sequencer ports. The ALSA sequencer interface is very versatile, it can provide ports for audio cards hardware synthesizers (i.e. emu10k1) but also for software synths, external devices, etc.\n"
-"This backend does not produce audio, MIDI events are handled directly from devices/programs behind the ALSA ports; in example, MIDI events sent to the hardware synth will be directly played.\n"
+"This backend sends MIDI events to a group of user-chosen ALSA sequencer "
+"ports. The ALSA sequencer interface is very versatile, it can provide ports "
+"for audio cards hardware synthesizers (i.e. emu10k1) but also for software "
+"synths, external devices, etc.\n"
+"This backend does not produce audio, MIDI events are handled directly from "
+"devices/programs behind the ALSA ports; in example, MIDI events sent to the "
+"hardware synth will be directly played.\n"
 "Backend written by Giacomo Lozito."
-msgstr "このバックエンドは、MIDI イベントを、ユーザが選択した ALSA シーケンサ・ポートのグループに送ります。ALSA シーケンサインターフェイスは非常に用途が広く、emu10k1 のようなハードウェアシンセサイザだけでなく、ソフトウェアシンセサイザや外部デバイスなどへのポートもサポートします。\nこのバックエンドはオーディオを生成せず、MIDI イベントは ALSA ポートの背後のデバイスやプログラムから直接取り扱われます。たとえば、ハードウェアシンセサイザに送られた MIDI イベントは直接演奏されます。\nバックエンドは Giacomo Lozito によって書かれました。"
+msgstr ""
+"このバックエンドは、MIDI イベントを、ユーザが選択した ALSA シーケンサ・ポート"
+"のグループに送ります。ALSA シーケンサインターフェイスは非常に用途が広く、"
+"emu10k1 のようなハードウェアシンセサイザだけでなく、ソフトウェアシンセサイザ"
+"や外部デバイスなどへのポートもサポートします。\n"
+"このバックエンドはオーディオを生成せず、MIDI イベントは ALSA ポートの背後のデ"
+"バイスやプログラムから直接取り扱われます。たとえば、ハードウェアシンセサイザ"
+"に送られた MIDI イベントは直接演奏されます。\n"
+"バックエンドは Giacomo Lozito によって書かれました。"
 
 #: src/amidi-plug/backend-fluidsynth/b-fluidsynth.c:38
 msgid "FluidSynth Backend "
@@ -311,10 +372,19 @@ msgstr "FluidSynth バックエンド "
 
 #: src/amidi-plug/backend-fluidsynth/b-fluidsynth.c:40
 msgid ""
-"This backend produces audio by sending MIDI events to FluidSynth, a real-time software synthesizer based on the SoundFont2 specification (www.fluidsynth.org).\n"
-"Produced audio can be manipulated via player effect plugins and is processed by chosen output plugin.\n"
+"This backend produces audio by sending MIDI events to FluidSynth, a real-"
+"time software synthesizer based on the SoundFont2 specification (www."
+"fluidsynth.org).\n"
+"Produced audio can be manipulated via player effect plugins and is processed "
+"by chosen output plugin.\n"
 "Backend written by Giacomo Lozito."
-msgstr "このバックエンドは音声を生成し、MIDI イベントを FluidSynth に送信します。FluidSynth は、SoundFont2 規格に基づいた、リアルタイムソフトウェアシンセサイザです。詳しくは、次のページをご覧ください。www.fluidsynth.org\n生成した音声は、プレイヤーのエフェクトプラグインや出力プラグインで処理することができます。\nバックエンドは、Giacomo Lozito によって書かれました。"
+msgstr ""
+"このバックエンドは音声を生成し、MIDI イベントを FluidSynth に送信します。"
+"FluidSynth は、SoundFont2 規格に基づいた、リアルタイムソフトウェアシンセサイ"
+"ザです。詳しくは、次のページをご覧ください。www.fluidsynth.org\n"
+"生成した音声は、プレイヤーのエフェクトプラグインや出力プラグインで処理するこ"
+"とができます。\n"
+"バックエンドは、Giacomo Lozito によって書かれました。"
 
 #: src/amidi-plug/i_configure-alsa.c:322
 msgid "Port"
@@ -348,7 +418,9 @@ msgstr "ミキサ設定"
 msgid ""
 "<span size=\"smaller\">ALSA\n"
 "backend</span>"
-msgstr "<span size=\"smaller\">ALSA\nバックエンド</span>"
+msgstr ""
+"<span size=\"smaller\">ALSA\n"
+"バックエンド</span>"
 
 #: src/amidi-plug/i_configure-ap.c:57
 msgid "AMIDI-Plug - backend information"
@@ -390,15 +462,9 @@ msgstr "MIDI ファイルから歌詞を抽出する (可能ならば)"
 msgid ""
 "<span size=\"smaller\">AMIDI\n"
 "Plug</span>"
-msgstr "<span size=\"smaller\">AMIDI\nPlug</span>"
-
-#: src/amidi-plug/i_configure.c:64
-msgid "AMIDI-Plug - select file"
-msgstr "AMIDI-Plug - ファイル選択"
-
-#: src/amidi-plug/i_configure.c:110
-msgid "AMIDI-Plug Settings"
-msgstr "AMIDI-Plus の設定"
+msgstr ""
+"<span size=\"smaller\">AMIDI\n"
+"Plug</span>"
 
 #: src/amidi-plug/i_configure-fluidsynth.c:55
 msgid "AMIDI-Plug - select SoundFont file"
@@ -494,7 +560,17 @@ msgstr "Hz "
 msgid ""
 "<span size=\"smaller\">FluidSynth\n"
 "backend</span>"
-msgstr "<span size=\"smaller\">FluidSynth\nバックエンド</span>"
+msgstr ""
+"<span size=\"smaller\">FluidSynth\n"
+"バックエンド</span>"
+
+#: src/amidi-plug/i_configure.c:64
+msgid "AMIDI-Plug - select file"
+msgstr "AMIDI-Plug - ファイル選択"
+
+#: src/amidi-plug/i_configure.c:110
+msgid "AMIDI-Plug Settings"
+msgstr "AMIDI-Plus の設定"
 
 #: src/amidi-plug/i_fileinfo.c:169
 msgid "Name:"
@@ -589,7 +665,10 @@ msgid ""
 "Triggers OSD when, during playback, the song title changes but the filename "
 "is the same. This is mostly useful to display title changes in internet "
 "streams."
-msgstr "再生中に、ファイル名が同じでも、曲のタイトルが変更されたときに OSD を表示します。これは、インターネットストリームのタイトル変更を表示するのにとても役に立ちます。"
+msgstr ""
+"再生中に、ファイル名が同じでも、曲のタイトルが変更されたときに OSD を表示しま"
+"す。これは、インターネットストリームのタイトル変更を表示するのにとても役に立"
+"ちます。"
 
 #: src/aosd/aosd_trigger.c:86
 msgid "Pause On"
@@ -721,8 +800,12 @@ msgstr "Composite マネージャが検出されました"
 #: src/aosd/aosd_ui.c:791
 msgid ""
 "Composite manager not detected;\n"
-"unless you know that you have one running, please activate a composite manager otherwise the OSD won't work properly"
-msgstr "Composite マネージャが検出されませんでした;\n動作させているかわからなければ, Composite マネージャを有効にしてください. そうしなければ OSD は正常に動作しないでしょう."
+"unless you know that you have one running, please activate a composite "
+"manager otherwise the OSD won't work properly"
+msgstr ""
+"Composite マネージャが検出されませんでした;\n"
+"動作させているかわからなければ, Composite マネージャを有効にしてください. そ"
+"うしなければ OSD は正常に動作しないでしょう."
 
 #: src/aosd/aosd_ui.c:799
 msgid "Composite manager not required for fake transparency"
@@ -825,6 +908,18 @@ msgstr "バウアー ステレオ-バイノーラル変換 (BS2B)"
 msgid "Spectrum Analyzer"
 msgstr "スペクトラムアナライザ"
 
+#: src/cd-menu-items/cd-menu-items.c:32
+msgid "Play CD"
+msgstr "CD を再生"
+
+#: src/cd-menu-items/cd-menu-items.c:32
+msgid "Add CD"
+msgstr "プレイリストに CD を追加"
+
+#: src/cd-menu-items/cd-menu-items.c:59
+msgid "Audio CD Menu Items"
+msgstr "オーディオ CD メニュー項目"
+
 #: src/cdaudio-ng/cdaudio-ng.c:123
 msgid "<b>Device</b>"
 msgstr "<b>デバイス</b>"
@@ -880,18 +975,6 @@ msgstr "ドライブにディスクがありません。"
 #: src/cdaudio-ng/cdaudio-ng.c:909
 msgid "Unsupported disk type."
 msgstr "非対応のディスクです。"
-
-#: src/cd-menu-items/cd-menu-items.c:32
-msgid "Play CD"
-msgstr "CD を再生"
-
-#: src/cd-menu-items/cd-menu-items.c:32
-msgid "Add CD"
-msgstr "プレイリストに CD を追加"
-
-#: src/cd-menu-items/cd-menu-items.c:59
-msgid "Audio CD Menu Items"
-msgstr "オーディオ CD メニュー項目"
 
 #: src/compressor/plugin.c:37
 msgid "<b>Compression</b>"
@@ -972,22 +1055,29 @@ msgstr "リバーブを増やす"
 
 #: src/console/configure.c:270
 msgid ""
-"The default song length, expressed in seconds, is used for songs that do not"
-" provide length information (i.e. looping tracks)."
-msgstr "秒数で表現されるデフォルトの曲の長さは, 長さ情報を提供しない曲 (例えばループするトラック) に用いられます."
+"The default song length, expressed in seconds, is used for songs that do not "
+"provide length information (i.e. looping tracks)."
+msgstr ""
+"秒数で表現されるデフォルトの曲の長さは, 長さ情報を提供しない曲 (例えばループ"
+"するトラック) に用いられます."
 
 #: src/crossfade/crossfade.c:83
 msgid ""
 "Crossfading failed because the songs had a different number of channels.  "
 "You can use the Channel Mixer to convert the songs to the same number of "
 "channels."
-msgstr "曲のチャンネル数が異なるため、クロスフェードが失敗しました。\n曲を同じチャンネル数にするために、チャンネルミキサが利用できます。"
+msgstr ""
+"曲のチャンネル数が異なるため、クロスフェードが失敗しました。\n"
+"曲を同じチャンネル数にするために、チャンネルミキサが利用できます。"
 
 #: src/crossfade/crossfade.c:90
 msgid ""
 "Crossfading failed because the songs had different sample rates.  You can "
 "use the Sample Rate Converter to convert the songs to the same sample rate."
-msgstr "曲のサンプリング周波数が異なるため、クロスフェードが失敗しました。\n曲を同じサンプリング周波数にするために、サンプリング周波数ミキサが利用できます。"
+msgstr ""
+"曲のサンプリング周波数が異なるため、クロスフェードが失敗しました。\n"
+"曲を同じサンプリング周波数にするために、サンプリング周波数ミキサが利用できま"
+"す。"
 
 #: src/crossfade/crossfade.c:260
 msgid "<b>Crossfade</b>"
@@ -1245,7 +1335,7 @@ msgstr "Vorbis エンコーダ設定"
 msgid "Quality level (0 - 10):"
 msgstr "品質レベル (0 - 10):"
 
-#: src/flacng/plugin.c:271
+#: src/flacng/plugin.c:278
 msgid "FLAC Decoder"
 msgstr "FLAC デコーダ"
 
@@ -1722,10 +1812,14 @@ msgstr "(なし)"
 
 #: src/hotkey/gui.c:234
 msgid ""
-"It is not recommended to bind the primary mouse buttons without modificators.\n"
+"It is not recommended to bind the primary mouse buttons without "
+"modificators.\n"
 "\n"
 "Do you want to continue?"
-msgstr "修飾キーなしでプライマリ・マウスのボタンに割り当てるのはお勧めしません。\n\n本当によろしいですか？"
+msgstr ""
+"修飾キーなしでプライマリ・マウスのボタンに割り当てるのはお勧めしません。\n"
+"\n"
+"本当によろしいですか？"
 
 #: src/hotkey/gui.c:236
 msgid "Binding mouse buttons"
@@ -1739,7 +1833,9 @@ msgstr "グローバルホットキープラグインの設定"
 msgid ""
 "Press a key combination inside a text field.\n"
 "You can also bind mouse buttons."
-msgstr "テキストフィールド内でキーコンビネーションを押してください。\nマウスボタンを組み合わせることもできます。"
+msgstr ""
+"テキストフィールド内でキーコンビネーションを押してください。\n"
+"マウスボタンを組み合わせることもできます。"
 
 #: src/hotkey/gui.c:407
 msgid "Hotkeys:"
@@ -1779,7 +1875,11 @@ msgid ""
 "<small>Separate multiple paths with a colon.\n"
 "These paths are searched in addition to LADSPA_PATH.\n"
 "After adding new paths, press Enter to scan for new plugins.</small>"
-msgstr "<small>複数のパスはコロンで区切ってください。これらのパス\nが、LADSPA_PATH の他に検索されます。新しいパスを追\n加した後は、新しいプラグインをスキャンするために、\nEnter キーを押してください。</small>"
+msgstr ""
+"<small>複数のパスはコロンで区切ってください。これらのパス\n"
+"が、LADSPA_PATH の他に検索されます。新しいパスを追\n"
+"加した後は、新しいプラグインをスキャンするために、\n"
+"Enter キーを押してください。</small>"
 
 #: src/ladspa/plugin.c:592
 msgid "Available plugins:"
@@ -1812,7 +1912,11 @@ msgid ""
 "%s: could not read LIRC config file\n"
 "%s: please read the documentation of LIRC\n"
 "%s: how to create a proper config file\n"
-msgstr "%s: LIRC の設定ファイルを読み込めません\n%s: LIRC のドキュメントをお読みください\n%s: 正しい設定ファイルの書き方\n\n"
+msgstr ""
+"%s: LIRC の設定ファイルを読み込めません\n"
+"%s: LIRC のドキュメントをお読みください\n"
+"%s: 正しい設定ファイルの書き方\n"
+"\n"
 
 #: src/lirc/lirc.c:115
 #, c-format
@@ -1950,7 +2054,7 @@ msgstr "デスクトップ通知"
 msgid "1. Default device"
 msgstr "1. デフォルトデバイス"
 
-#: src/oss4/plugin.c:75 src/sndio/sndio.c:412
+#: src/oss4/plugin.c:75 src/sndio/sndio.c:414
 msgid "Audio device:"
 msgstr "オーディオデバイス:"
 
@@ -1968,7 +2072,8 @@ msgstr "OSS ソフトウェアのフォーマット変換を有効にする"
 
 #: src/oss4/plugin.c:85
 msgid "Enable exclusive mode to prevent virtual mixing."
-msgstr "バーチャルミキシングを防ぐために排他的モード (exclusive mode) を有効にする"
+msgstr ""
+"バーチャルミキシングを防ぐために排他的モード (exclusive mode) を有効にする"
 
 #: src/oss4/plugin.c:115
 msgid "OSS4 Output"
@@ -1978,7 +2083,7 @@ msgstr "OSS4 出力"
 msgid "PLS Playlists"
 msgstr "PLS プレイリスト"
 
-#: src/psf/plugin.c:262
+#: src/psf/plugin.c:263
 msgid "OpenPSF PSF1/PSF2 Decoder"
 msgstr "OpenPSF PSF1/PSF2 デコーダ"
 
@@ -2107,7 +2212,9 @@ msgstr "不明なアルバム"
 msgid ""
 "%s\n"
 " on %s by %s"
-msgstr "%s\nアルバム: %s アーティスト: %s"
+msgstr ""
+"%s\n"
+"アルバム: %s アーティスト: %s"
 
 #: src/search-tool/search-tool.c:633
 #, c-format
@@ -2151,7 +2258,9 @@ msgstr "ライブラリを検索"
 msgid ""
 "To import your music library into Audacious, choose a folder and then click "
 "the \"refresh\" icon."
-msgstr "音楽ライブラリを Audacious へインポートするには、フォルダを選択し、\"再読み込み\" アイコンをクリックしてください。"
+msgstr ""
+"音楽ライブラリを Audacious へインポートするには、フォルダを選択し、\"再読み込"
+"み\" アイコンをクリックしてください。"
 
 #: src/search-tool/search-tool.c:742
 msgid "Please wait ..."
@@ -2988,11 +3097,14 @@ msgstr "有効になっているプレイリストのエントリを検索"
 
 #: src/skins/ui_playlist.c:253
 msgid ""
-"Select entries in playlist by filling one or more fields. Fields use regular"
-" expressions syntax, case-insensitive. If you don't know how regular "
+"Select entries in playlist by filling one or more fields. Fields use regular "
+"expressions syntax, case-insensitive. If you don't know how regular "
 "expressions work, simply insert a literal portion of what you're searching "
 "for."
-msgstr "1つ以上の項目を入力すると、プレイリストのエントリが選択できます。項目には正規表現が使え、大文字と小文字を区別しません。正規表現の動作がわからない場合は、検索したい文字をそのまま入力してください。"
+msgstr ""
+"1つ以上の項目を入力すると、プレイリストのエントリが選択できます。項目には正規"
+"表現が使え、大文字と小文字を区別しません。正規表現の動作がわからない場合は、"
+"検索したい文字をそのまま入力してください。"
 
 #: src/skins/ui_playlist.c:261
 msgid "Title: "
@@ -3057,24 +3169,30 @@ msgid ""
 "Sndio Output Plugin\n"
 "\n"
 "Written by Thomas Pfaff <tpfaff@tp76.info>\n"
-msgstr "Sndio 出力プラグイン\n\nWritten by Thomas Pfaff <tpfaff@tp76.info>\n"
+msgstr ""
+"Sndio 出力プラグイン\n"
+"\n"
+"Written by Thomas Pfaff <tpfaff@tp76.info>\n"
 
-#: src/sndio/sndio.c:259
+#: src/sndio/sndio.c:261
 msgid "Unsupported format"
 msgstr "対応していない形式"
 
-#: src/sndio/sndio.c:260
+#: src/sndio/sndio.c:262
 msgid ""
 "A format not supported by the audio device was requested.\n"
 "\n"
 "Please try again with the sndiod(1) server running."
-msgstr "オーディオデバイスで対応していない形式が要求されました。\n\nsndiod(1) サーバが起動してから、もう一度実行してください。"
+msgstr ""
+"オーディオデバイスで対応していない形式が要求されました。\n"
+"\n"
+"sndiod(1) サーバが起動してから、もう一度実行してください。"
 
-#: src/sndio/sndio.c:403
+#: src/sndio/sndio.c:405
 msgid "sndio device"
 msgstr "sndio デバイス"
 
-#: src/sndio/sndio.c:419
+#: src/sndio/sndio.c:421
 msgid "(empty means default)"
 msgstr "(空の場合、デフォルトに設定します)"
 
@@ -3102,7 +3220,9 @@ msgstr "プレイリストの最後に到達したときに実行するコマン
 #: src/song_change/song_change.c:456
 msgid ""
 "Command to run when title changes for a song (i.e. network streams titles)."
-msgstr "曲のタイトルが変わったときに実行するコマンド (ネットワークストリームのタイトルなど)"
+msgstr ""
+"曲のタイトルが変わったときに実行するコマンド (ネットワークストリームのタイト"
+"ルなど)"
 
 #: src/song_change/song_change.c:462
 msgid ""
@@ -3121,13 +3241,30 @@ msgid ""
 "%a: Artist\n"
 "%b: Album\n"
 "%T: Track title"
-msgstr "次のフォーマット文字列を使用できます。\nこれらは、コマンドが呼ばれる前に置換されます。\nただし、プレイリストの最後の曲の場合、無意味なものもあります\n\n%F: サンプリング周波数 (Hz)\n%c: チャンネル数\n%f: ファイル名 (フルパス)\n%l: 長さ (ms)\n%n または %s: 曲名\n%r: ビットレート (bps)\n%t: プレイリストの位置 (%02d)\n%p: 再生中か？ (1 or 0)\n%a: アーティスト\n%b: アルバム\n%T: トラック名"
+msgstr ""
+"次のフォーマット文字列を使用できます。\n"
+"これらは、コマンドが呼ばれる前に置換されます。\n"
+"ただし、プレイリストの最後の曲の場合、無意味なものもあります\n"
+"\n"
+"%F: サンプリング周波数 (Hz)\n"
+"%c: チャンネル数\n"
+"%f: ファイル名 (フルパス)\n"
+"%l: 長さ (ms)\n"
+"%n または %s: 曲名\n"
+"%r: ビットレート (bps)\n"
+"%t: プレイリストの位置 (%02d)\n"
+"%p: 再生中か？ (1 or 0)\n"
+"%a: アーティスト\n"
+"%b: アルバム\n"
+"%T: トラック名"
 
 #: src/song_change/song_change.c:489
 msgid ""
 "<span size='small'>Parameters passed to the shell should be encapsulated in "
 "quotes. Doing otherwise is a security risk.</span>"
-msgstr "<span size='small'>シェルに渡されるパラメータはクォートでくくってください。そうしない場合、セキュリティ上の危険があります。</span>"
+msgstr ""
+"<span size='small'>シェルに渡されるパラメータはクォートでくくってください。そ"
+"うしない場合、セキュリティ上の危険があります。</span>"
 
 #: src/song_change/song_change.c:500
 msgid "Commands"
@@ -3222,7 +3359,7 @@ msgstr "VTX デコーダ"
 msgid "WavPack Decoder"
 msgstr "WavPack デコーダ"
 
-#: src/xsf/plugin.c:272
+#: src/xsf/plugin.c:273
 msgid "2SF Decoder"
 msgstr "2SF デコーダ"
 
