--- a/po/ru.po
+++ b/po/ru.po
@@ -17,8 +17,8 @@ msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2012-09-15 12:42+0200\n"
-"PO-Revision-Date: 2012-09-11 00:01+0000\n"
-"Last-Translator: chingis <q9mwvwxx@lavabit.com>\n"
+"PO-Revision-Date: 2012-10-21 15:50+0300\n"
+"Last-Translator: Musatov M. <m1kc@yandex.ru>\n"
 "Language-Team: Russian\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -70,7 +70,7 @@ msgstr "минуты"
 
 #: src/alarm/interface.c:376
 msgid "Quiet after:"
-msgstr "Тихо после:"
+msgstr "Перестать звонить после:"
 
 #: src/alarm/interface.c:386
 msgid "Alarm at (default):"
@@ -78,7 +78,7 @@ msgstr "Будильник в (по умолчанию):"
 
 #: src/alarm/interface.c:404
 msgid "Choose the days for the alarm to come on"
-msgstr "Выберите дни для запуска будильника"
+msgstr "Выберите дни, в которые будет срабатывать будильник"
 
 #: src/alarm/interface.c:431 src/alarm/interface.c:477
 #: src/alarm/interface.c:523 src/alarm/interface.c:569
@@ -127,7 +127,7 @@ msgstr "Дни"
 
 #: src/alarm/interface.c:839
 msgid "Fading"
-msgstr "Затухание"
+msgstr "Плавное нарастание громкости"
 
 #: src/alarm/interface.c:876 src/crossfade/crossfade.c:263 src/lirc/lirc.c:416
 msgid "seconds"
@@ -143,7 +143,7 @@ msgstr "Текущее"
 
 #: src/alarm/interface.c:918
 msgid "Start at"
-msgstr "Начать в"
+msgstr "Начать c"
 
 #: src/alarm/interface.c:946 src/alarm/interface.c:990
 msgid "%"
@@ -151,11 +151,11 @@ msgstr "%"
 
 #: src/alarm/interface.c:962
 msgid "Final"
-msgstr "Завершить"
+msgstr "В конце"
 
 #: src/alarm/interface.c:1015
 msgid "Additional Command"
-msgstr "Дополнительные команды"
+msgstr "Дополнительная команда"
 
 #: src/alarm/interface.c:1041
 msgid "enable"
@@ -171,11 +171,11 @@ msgstr "Выберите список воспроизведения"
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
-msgstr "Напоминатель"
+msgstr "Напоминание"
 
 #: src/alarm/interface.c:1102
 msgid "Use reminder"
-msgstr "Использовать напоминатель"
+msgstr "Использовать напоминание"
 
 #: src/alarm/interface.c:1118
 msgid "Options"
@@ -237,6 +237,52 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
+"\n"
+"Время\n"
+"  Будильник в: \n"
+"    Время срабатывания будильника.\n"
+"\n"
+"  Перестать звонить после: \n"
+"    Перестать звонить через указанный промежуток времени.\n"
+"       (если окно звонка не было закрыто)\n"
+"\n"
+"\n"
+"Дни\n"
+"  День:\n"
+"    Выберите дни, в которые будет срабатывать будильник.\n"
+"\n"
+"  Время:\n"
+"    Выберите время срабатывания в каждый из дней\n"
+"    или установите срабатывание во время по умолчанию.\n"
+"\n"
+"\n"
+"Громкость\n"
+"  Плавное нарастание громкости: \n"
+"    Плавно поднимать громкость до заданной \n"
+"    за данное время.\n"
+"\n"
+"  Начать с: \n"
+"    Начать плавное нарастание с этой громкости.\n"
+"\n"
+"  В конце: \n"
+"    Громкость, на которой следует прекратить плавное\n"
+"    нарастание. Если время установлено в 0, то эта громкость\n"
+"    задаётся сразу.\n"
+"\n"
+"\n"
+"Опции:\n"
+"  Дополнительная команда:\n"
+"    Выполнить эту команду в момент срабатывания будильника.\n"
+"\n"
+"  Список воспроизведения: \n"
+"    Воспроизвести этот список воспроизведения.\n"
+"    Если не задано, будет использоваться текущий.\n"
+"    Здесь также может быть указан URL потока mp3/ogg.\n"
+"\n"
+"  Напоминание:\n"
+"    Отобразить напоминание, когда будильник затихнет.\n"
+"    Введите текст в поле и поставьте рядом галочку\n"
+"    для активации.\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
@@ -248,7 +294,7 @@ msgstr "Отмена"
 
 #: src/alarm/interface.c:1257
 msgid "Your reminder for today is.."
-msgstr "Ваше напоминание на сегодня это..."
+msgstr "Ваше напоминание на сегодня..."
 
 #: src/alarm/interface.c:1282
 msgid "Thankyou"
@@ -256,7 +302,7 @@ msgstr "Спасибо"
 
 #: src/albumart/albumart.c:101
 msgid "Album Art"
-msgstr "Альбом"
+msgstr "Обложка альбома"
 
 #: src/alsa/config.c:210
 msgid "Default PCM device"
@@ -292,7 +338,7 @@ msgstr "Вывод ALSA"
 
 #: src/amidi-plug/amidi-plug.c:39
 msgid "AMIDI-Plug (MIDI Player)"
-msgstr "AMIDI-Плагин (проигрыватель MIDI)"
+msgstr "Плагин AMIDI (проигрыватель MIDI)"
 
 #: src/amidi-plug/amidi-plug.c:327
 msgid ""
@@ -584,15 +630,15 @@ msgstr "* в этом MIDI-файле нет текстов *"
 
 #: src/amidi-plug/i_fileinfo.c:349
 msgid "  (invalid UTF-8)"
-msgstr "  (недопустимая последовательность Юникод)"
+msgstr "  (неверный UTF-8)"
 
 #: src/amidi-plug/i_utils.c:36
 msgid "About AMIDI-Plug"
-msgstr "О AMIDI-Plug"
+msgstr "Об AMIDI-Plug"
 
 #: src/aosd/aosd.c:37
 msgid "AOSD (On-Screen Display)"
-msgstr "AOSD (отображение на экране)"
+msgstr "AOSD (всплывающие сообщения)"
 
 #: src/aosd/aosd_style.c:75
 msgid "Rectangle"
@@ -716,7 +762,7 @@ msgstr "Поддержка местных языков"
 
 #: src/aosd/aosd_ui.c:445
 msgid "Disable UTF-8 conversion of text (in aosd)"
-msgstr "Отключить преобразование текста в UTF-8"
+msgstr "Отключить преобразование текста в UTF-8 (в aosd)"
 
 #: src/aosd/aosd_ui.c:462
 msgid "Select Skin File"
@@ -833,11 +879,11 @@ msgstr "Прочее"
 
 #: src/asx/asx.c:97
 msgid "ASXv1/ASXv2 Playlists"
-msgstr "ASXv1/ASXv2 Плэйлист"
+msgstr "Списки воспроизведения ASXv1/ASXv2"
 
 #: src/audpl/audpl.c:224
 msgid "Audacious Playlists (audpl)"
-msgstr "Audacious Плйлист (audpl)"
+msgstr "Списки воспроизведения Audacious (audpl)"
 
 #: src/blur_scope/blur_scope.c:49
 msgid "<b>Color</b>"
@@ -845,7 +891,7 @@ msgstr "<b>Цвет</b>"
 
 #: src/blur_scope/blur_scope.c:58
 msgid "Blur Scope"
-msgstr "Уровень размытия"
+msgstr "Размывающийся уровень"
 
 #: src/bs2b/plugin.c:138
 msgid "Bauer Stereophonic-to-Binaural Preferences"
@@ -865,11 +911,11 @@ msgstr "Заготовки:"
 
 #: src/bs2b/plugin.c:199
 msgid "Bauer Stereophonic-to-Binaural (BS2B)"
-msgstr "Бауэр Стереофоник в Бинэрал (BS2B)"
+msgstr "Стереофонический в бинауральный по Бауэру (BS2B)"
 
 #: src/cairo-spectrum/cairo-spectrum.c:296
 msgid "Spectrum Analyzer"
-msgstr "Спектрум анализатор"
+msgstr "Анализатор спектра"
 
 #: src/cd-menu-items/cd-menu-items.c:32
 msgid "Play CD"
@@ -881,7 +927,7 @@ msgstr "Добавить CD-диск"
 
 #: src/cd-menu-items/cd-menu-items.c:59
 msgid "Audio CD Menu Items"
-msgstr "Пункты меню Аудио CD"
+msgstr "Пункты меню Audio CD"
 
 #: src/cdaudio-ng/cdaudio-ng.c:123
 msgid "<b>Device</b>"
@@ -889,19 +935,19 @@ msgstr "<b>Устройство</b>"
 
 #: src/cdaudio-ng/cdaudio-ng.c:124
 msgid "Read speed:"
-msgstr "Скорость чтения"
+msgstr "Скорость чтения:"
 
 #: src/cdaudio-ng/cdaudio-ng.c:127
 msgid "Override device:"
-msgstr "Переопределить устройство"
+msgstr "Переопределить устройство:"
 
 #: src/cdaudio-ng/cdaudio-ng.c:129
 msgid "<b>Metadata</b>"
-msgstr "Метаданные"
+msgstr "<b>Метаданные</b>"
 
 #: src/cdaudio-ng/cdaudio-ng.c:130
 msgid "Use CD-Text"
-msgstr "Использовать CD-Текст"
+msgstr "Использовать CD-Text"
 
 #: src/cdaudio-ng/cdaudio-ng.c:132
 msgid "Use CDDB"
@@ -925,11 +971,11 @@ msgstr "Порт:"
 
 #: src/cdaudio-ng/cdaudio-ng.c:150
 msgid "Audio CD Plugin"
-msgstr "Аудио CD Плагин"
+msgstr "Плагин Audio CD"
 
 #: src/cdaudio-ng/cdaudio-ng.c:531
 msgid "Audio CD"
-msgstr "Аудио CD"
+msgstr "Audio CD"
 
 #: src/cdaudio-ng/cdaudio-ng.c:907
 msgid "Drive is empty."
@@ -941,7 +987,7 @@ msgstr "Неподдерживаемый тип диска."
 
 #: src/compressor/plugin.c:37
 msgid "<b>Compression</b>"
-msgstr "Сжатие"
+msgstr "<b>Сжатие</b>"
 
 #: src/compressor/plugin.c:38
 msgid "Center volume:"
@@ -957,7 +1003,7 @@ msgstr "Компрессор широкого диапозона"
 
 #: src/console/configure.c:135 src/console/plugin.c:44
 msgid "Game Console Music Decoder"
-msgstr "Модуль поддержки звука игровой консоли"
+msgstr "Декодер звука игровой консоли"
 
 #: src/console/configure.c:152
 msgid "General"
@@ -1031,22 +1077,22 @@ msgid ""
 "You can use the Channel Mixer to convert the songs to the same number of "
 "channels."
 msgstr ""
-"Кроссфэйдер столкнулся с ошибкой потому, что песня имеет различное "
-"количество каналов.  Ты можешь использовать Микшер Каналов для того, что бы "
-"конвертировать песню в то же количество каналов."
+"Кроссфэйдер столкнулся с ошибкой, потому что песня имеет другое количество "
+"каналов.  Вы можете использовать микшер каналов, чтобы конвертировать песню "
+"в то же количество каналов."
 
 #: src/crossfade/crossfade.c:90
 msgid ""
 "Crossfading failed because the songs had different sample rates.  You can "
 "use the Sample Rate Converter to convert the songs to the same sample rate."
 msgstr ""
-"Кроссфэйдер столкнулся с проблемой потому, что песня имеет разную частоту "
-"дискретизации. Ты можешь использовать Конвертер частоты дискретизации для "
-"конвертирования песни в туже частоту."
+"Кроссфэйдер столкнулся с ошибкой, потому что песня имеет другую частоту "
+"дискретизации. Вы можете использовать конвертер частоты дискретизации для "
+"конвертирования песни в ту же частоту."
 
 #: src/crossfade/crossfade.c:260
 msgid "<b>Crossfade</b>"
-msgstr "<b>Кроссфэйдер</b>"
+msgstr "<b>Плавный переход</b>"
 
 #: src/crossfade/crossfade.c:261
 msgid "Overlap:"
@@ -1054,7 +1100,7 @@ msgstr "Перекрытие:"
 
 #: src/crossfade/crossfade.c:271
 msgid "Crossfade"
-msgstr "Кроссфэйдер"
+msgstr "Плавный переход"
 
 #: src/crystalizer/crystalizer.c:42
 msgid "<b>Crystalizer</b>"
@@ -1298,7 +1344,7 @@ msgstr "Настройка кодека Vorbis"
 
 #: src/filewriter/vorbis.c:235
 msgid "Quality level (0 - 10):"
-msgstr "Уровень качества (0 - 10):"
+msgstr "Уровень качества (0 – 10):"
 
 #: src/flacng/plugin.c:278
 msgid "FLAC Decoder"
@@ -1701,8 +1747,8 @@ msgstr "стерео"
 msgid "%d channel"
 msgid_plural "%d channels"
 msgstr[0] "%d канал"
-msgstr[1] "%d каналов"
-msgstr[2] "%d каналы"
+msgstr[1] "%d канала"
+msgstr[2] "%d каналов"
 
 #: src/gtkui/ui_statusbar.c:124
 #, c-format
@@ -1936,7 +1982,7 @@ msgstr "Не удалось проанализировать %s"
 
 #: src/lyricwiki/lyricwiki.c:234
 msgid "Looking for lyrics ..."
-msgstr "Ищу текст песни ..."
+msgstr "Поиск текста песни ..."
 
 #: src/lyricwiki/lyricwiki.c:245
 msgid "Missing song metadata"
@@ -2014,7 +2060,7 @@ msgstr "Audacious ничего не воспроизводит."
 
 #: src/notify/notify.c:52
 msgid "Desktop Notifications"
-msgstr "Уведомления на рабочем столе"
+msgstr "Всплывающие сообщения"
 
 #: src/oss4/plugin.c:36
 msgid "1. Default device"
@@ -3150,7 +3196,7 @@ msgstr "Невозможно создать каталог (%s): %s\n"
 
 #: src/sndfile/plugin.c:437
 msgid "Sndfile Plugin"
-msgstr "Sndfile Плагин"
+msgstr "Плагин Sndfile"
 
 #: src/sndio/sndio.c:189
 msgid "About Sndio Output Plugin"
@@ -3162,13 +3208,13 @@ msgid ""
 "\n"
 "Written by Thomas Pfaff <tpfaff@tp76.info>\n"
 msgstr ""
-"Плагин вывода Sndio,\n"
+"Плагин вывода Sndio\n"
 "\n"
-"автор — Thomas Pfaff <tpfaff@tp76.info>\n"
+"Автор — Thomas Pfaff <tpfaff@tp76.info>\n"
 
 #: src/sndio/sndio.c:261
 msgid "Unsupported format"
-msgstr "Неподдерживаемый формат"
+msgstr "Формат не поддерживается"
 
 #: src/sndio/sndio.c:262
 msgid ""
@@ -3256,7 +3302,7 @@ msgstr "Команды"
 
 #: src/speed-pitch/speed-pitch.c:227
 msgid "<b>Speed and Pitch</b>"
-msgstr "<b>Скорость и Высота</b>"
+msgstr "<b>Скорость и высота</b>"
 
 #: src/speed-pitch/speed-pitch.c:228
 msgid "Speed:"
@@ -3268,7 +3314,7 @@ msgstr "Высота:"
 
 #: src/speed-pitch/speed-pitch.c:266
 msgid "Speed and Pitch"
-msgstr "Скорость и Высота"
+msgstr "Скорость и высота"
 
 #: src/statusicon/statusicon.c:399
 msgid "<b>Mouse Scroll Action</b>"
@@ -3304,11 +3350,11 @@ msgstr "Иконка статуса"
 
 #: src/stereo_plugin/stereo.c:27
 msgid "<b>Extra Stereo</b>"
-msgstr "<b>Экстра стерео</b>"
+msgstr "<b>Расширенное стерео</b>"
 
 #: src/stereo_plugin/stereo.c:38
 msgid "Extra Stereo"
-msgstr "Экстра стерео"
+msgstr "Расширенное стерео"
 
 #: src/tonegen/tonegen.c:86
 #, c-format
@@ -3349,4 +3395,4 @@ msgstr "Декодер 2SF"
 
 #: src/xspf/xspf.c:442
 msgid "XML Shareable Playlists (XSPF)"
-msgstr "XML разделяемые плейлисты (XSPF)"
+msgstr "XSPF"
